# linearAlgebra

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
benchmarks/: CMakeLists.txt  bfs.cpp  bitvec.cpp  bitvec_bench.cpp  bsf.cpp  circularbuffer_bench.cpp  precond_bench.cpp  reordering.cpp  reordering_bench.cpp  spmv_bench.cpp  triangular_solve.cpp  triangular_solve_bench.cpp  uncategorized_bench.cpp  unionfind.cpp
cmake/: DownloadFile.cmake  GoogleBenchmark.cmake  GoogleTest.cmake  config.h.in
data/: GD01_c.mtx
execs/: CMakeLists.txt  analysisBinary.cpp  eigen.cpp  linearSolve.cpp  main.cpp  temp_test.cpp  test1.cpp  tmp.cpp  tmp2.cpp
mkl_wrapper/: CMakeLists.txt  amgcl_precond.cpp  amgcl_precond.h  arpack_wrapper.cpp  arpack_wrapper.h  cudss_wrapper.cpp  cudss_wrapper.h  incomplete_cholesky.cpp  incomplete_cholesky.h  incomplete_lu.cpp  incomplete_lu.h  matrix_utils.cpp  matrix_utils.hpp  mkl_eigen.cpp  mkl_eigen.h  mkl_iterative.cpp  mkl_iterative.h  mkl_pcg.cpp  mkl_pcg.h  mkl_solver.cpp  mkl_solver.h  mkl_sparse_mat.cpp  mkl_sparse_mat.h  mumps_solver.cpp  mumps_solver.h  spmv.hpp  triangle_solve.hpp  trinagle_solve.tpp  weighted_jacobi.hpp
reordering/: BFS.cpp  BFS.h  CMakeLists.txt  Reordering.cpp  Reordering.h  UnionFind.cpp  UnionFind.h
sparse_mat_op/: CMakeLists.txt  aat.hpp  graph_algs.hpp  matrix_utils.cpp  matrix_utils.hpp  precond.cpp  precond.hpp  precond_symbolic.cpp  precond_symbolic.hpp  sparse_mat_traits.hpp  spmv.hpp  triangle_solve.cpp  triangle_solve.hpp  triangle_solve.tpp  weighted_jacobi.hpp
tests/: CMakeLists.txt  bfs_test.cpp  circularbuffer_test.cpp  mkl_sparse_mat_test.cpp  precond_test.cpp  reordering_test.cpp  solver_test.cpp  spmv_test.cpp  triangular_solve_test.cpp  uncatergorized_test.cpp  utils_test.cpp
tests/data/: jgl009.mtx  rdist1.mtx
utils/: BitVector.h  BitVector.hpp  CMakeLists.txt  circularbuffer.hpp  circularbuffer.tpp  timer.cpp  timer.h  utils.cpp  utils.h
